// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopicsList> should render 1`] = `
<React.Fragment>
  <Text
    type="primary"
  >
    Zgłoszone tematy
  </Text>
</React.Fragment>
`;

exports[`<TopicsList> when topics are loading should match snapshot 1`] = `
<React.Fragment>
  <Text
    type="primary"
  >
    Zgłoszone tematy
  </Text>
  <ActivityIndicator />
</React.Fragment>
`;

exports[`<TopicsList> when topics are provided should match snapshot 1`] = `
<React.Fragment>
  <Text
    type="primary"
  >
    Zgłoszone tematy
  </Text>
  <Topic
    key="0"
    topic={
      TopicModel {
        "members": Array [],
        "trainers": Array [],
      }
    }
  />
  <Topic
    key="1"
    topic={
      TopicModel {
        "members": Array [],
        "trainers": Array [],
      }
    }
  />
</React.Fragment>
`;
